se agrega proporcion y factguracion electronica

--- a/src/app/envio-documentos/envio-documentos.component.html
+++ b/src/app/envio-documentos/envio-documentos.component.html
@@ -123,7 +123,7 @@
       </div>
     </div>
   </div>
-
+  <ngx-qrcode qrc-element-type="url" [qrc-value]="ngxQrcode2" id="qrcode1" style="display: none;" ></ngx-qrcode>
   <div class="col col-ms-1">
     <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
 
