--- a/src/app/estado-documentos/estado-documentos.component.html
+++ b/src/app/estado-documentos/estado-documentos.component.html
@@ -60,20 +60,20 @@
     <tbody>
       <tr *ngFor="let ordenes of documentos">
         <th scope="row">
-          <button type="button" (click)="editarItem(ordenes)" title="Detalle" class="btn btn-secondary btn-sm mr-1"
-            data-toggle="modal" data-target="#exampleModal">
+          <button type="button" (click)="invoiceDocumento(ordenes)" title="Detalle" class="btn btn-secondary btn-sm mr-1"
+            data-toggle="modal" data-target="#estadosModal">
             <i class="fas fa-search"></i>
           </button>
           <button type="button" (click)="enviarUno(ordenes)" title="Reenviar a la DIAN" class="btn btn-secondary btn-sm mr-1"
           data-toggle="modal" data-target="#exampleModal">
           <i class="fas fa-sync"></i>
         </button>
-        <button type="button" (click)="editarItem(ordenes)" title="Descargar Representación grafica" class="btn btn-secondary btn-sm mr-1"
-          data-toggle="modal" data-target="#exampleModal">
+        <button type="button" (click)="descargarPDF(ordenes)" title="Descargar Representación grafica" class="btn btn-secondary btn-sm mr-1"
+          data-toggle="modal" >
           <i class="far fa-file-pdf"></i>
         </button>
-        <button type="button" (click)="DescargarXML(ordenes)" title="Descargar XML" class="btn btn-secondary btn-sm mr-1"
-        data-toggle="modal" data-target="#exampleModal">
+        <button type="button" (click)="descargarXML(ordenes)" title="Descargar XML" class="btn btn-secondary btn-sm mr-1"
+       >
         <i class="far fa-file-code"></i>
       </button>
           <input type="checkbox" class="form-check-input ml-3 allti" id="{{ordenes.documento_id}}"
@@ -139,6 +139,41 @@
      </div>
    </div>
  </div>
+
+ <!-- Modal estados-->
+<div class="modal fade" id="estadosModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Estados de envio del documento</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Estado</th>
+              <th scope="col">Mensaje</th>
+              <th scope="col">Fecha</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let ordenes of invoicesDocumento">
+              <td> {{nombreEstado(ordenes.invoice_id)}}</td>
+              <td>{{ordenes.mensaje}}</td>
+              <td>{{ordenes.fecha_registro | date: 'dd/MM/yyyy, h:mm a'}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
  <div class="col col-ms-1">
   <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
