ajuste imagen principal

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,8 +26,13 @@
       </div>
     </div>
   </div>
-  <div class="fixed-bottom foother footer mr-4" >
+  <div class="fixed-bottom foother footer mr-4 " >
+  <div class="d-none d-sm-block">
     <img src="../../assets/images/nice.jpeg " height="100px" width="240px" />
+  </div>
+  <div class="d-block d-sm-none">
+    <img src="../../assets/images/nice.jpeg " height="50px" width="120px" />
+  </div>
     <h6>Soporte: 3112864974 - 3185222474</h6>
     <h6>info@effectivesoftware.com.co</h6>
   </div>
