se agrega informe diario en ordenes y se corrige la busqueda de empleado

--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -580,7 +580,7 @@
                 <th scope="col">Orden</th>
                 <th scope="col">Cantidad</th>
                 <th scope="col">Unitario</th>
-                <th scope="col">Impuesto %</th>
+                <th scope="col">IVA %</th>
                 <th scope="col">Parcial</th>
               </tr>
             </thead>
