--- a/src/app/ventas-dia/ventas-dia.component.html
+++ b/src/app/ventas-dia/ventas-dia.component.html
@@ -374,6 +374,7 @@
                                 (keydown.S)="enterTecla(continuaImpresionPV)" (keydown.N)="cancelarImpresion()">
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
